--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<core.scmVersion>dev</core.scmVersion>
 		<core.scmVersionType>tag</core.scmVersionType>
 
-		<jdbc.scmVersion>7.2.0-375</jdbc.scmVersion>
+		<jdbc.scmVersion>7.0.11</jdbc.scmVersion>
 		<jdbc.scmVersionType>tag</jdbc.scmVersionType>
 		<sip.scmVersion>7.2.0-278</sip.scmVersion>
 		<sip.scmVersionType>tag</sip.scmVersionType>
